# testsvm

./: .gitignore  Cargo.toml  README.md  devenv.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/address-book/: Cargo.toml  README.md
crates/address-book/src/: address_book.rs  lib.rs  pda_seeds.rs  registered_address.rs
crates/anchor-utils/: CHANGELOG.md  Cargo.toml  README.md
crates/anchor-utils/idls/: quarry_mine.json
crates/anchor-utils/src/: lib.rs
crates/solana-address-book/: CHANGELOG.md  Cargo.toml  README.md
crates/solana-address-book/src/: address_book.rs  lib.rs  pda_seeds.rs  registered_address.rs
crates/testsvm/: CHANGELOG.md  Cargo.toml  README.md
crates/testsvm-assertions/: CHANGELOG.md  Cargo.toml  README.md
crates/testsvm-assertions/src/: lib.rs
crates/testsvm-core/: CHANGELOG.md  Cargo.toml  README.md
crates/testsvm-core/src/: account_ref.rs  lib.rs  litesvm_helpers.rs  prelude.rs  tx_result.rs
crates/testsvm-quarry/: CHANGELOG.md  Cargo.toml  README.md
crates/testsvm-quarry/idls/: quarry_merge_mine.json  quarry_mint_wrapper.json
crates/testsvm-quarry/src/: lib.rs  prelude.rs  setup.rs  test_merge_miner.rs  test_merge_pool.rs  test_mint_wrapper.rs  test_quarry.rs  test_rewarder.rs
crates/testsvm-quarry/src/tests/: common.rs  mod.rs  test_claim_rewards.rs  test_deposit_withdraw.rs  test_mint_wrapper.rs  test_mint_wrapper_actions.rs  test_quarry_setup.rs  test_rewarder_management.rs
crates/testsvm-spl/: CHANGELOG.md  Cargo.toml  README.md
crates/testsvm-spl/src/: lib.rs  prelude.rs
crates/testsvm/src/: account_ref.rs  assertions.rs  lib.rs  litesvm_helpers.rs  prelude.rs  testsvm.rs  tx_result.rs
