[package]
name = "address-book"
version = "0.1.0"
edition = "2024"
description = "A library for managing and tracking Solana addresses used in transactions"
license = "Apache-2.0"
repository = "https://github.com/macalinao/testsvm"

[dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0"
colored = "2.1"
hex = "0.4"
strum = { version = "0.26", features = ["derive"] }
anchor-spl = "0.31.1"

[dev-dependencies]