[package]
name = "solana-address-book"
version = "0.1.1"
edition = "2024"
description = "A library for managing and tracking Solana addresses used in transactions"
license = "Apache-2.0"
authors = ["Ian Macalinao <me@ianm.com>"]
documentation = "https://docs.rs/solana-address-book"
homepage = "https://github.com/macalinao/testsvm"
repository = "https://github.com/macalinao/testsvm"
readme = "README.md"
keywords = ["ian-macalinao", "solana", "addresses", "tracking", "blockchain"]
categories = ["development-tools", "blockchain", "data-structures"]

[dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0"
colored = "3.0"
hex = "0.4"
strum = { version = "0.27", features = ["derive"] }
anchor-spl = "0.31.1"

[dev-dependencies]
