[package]
name = "testsvm-spl"
version = "0.1.1"
authors = ["Ian Macalinao <me@ianm.com>"]
edition = "2024"
license = "Apache-2.0"
description = "SPL helpers for TestSVM"
documentation = "https://docs.rs/testsvm-spl"
homepage = "https://github.com/macalinao/testsvm"
repository = "https://github.com/macalinao/testsvm"
readme = "README.md"
keywords = ["ian-macalinao", "spl", "token", "solana", "testsvm"]
categories = ["development-tools::testing", "cryptography::cryptocurrencies"]

[dependencies]
anyhow = "1.0"
solana-sdk = "3.0"
anchor-spl = "0.32"
anchor-lang = "0.32"
testsvm-core = { path = "../testsvm-core", version = "0.2.0" }
solana-address-book = { path = "../solana-address-book", version = "0.2.1" }
