[package]
name = "testsvm"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Ian Macalinao <me@ianm.com>"]
description = "A comprehensive testing framework for Solana SVM (Solana Virtual Machine) programs"
documentation = "https://docs.rs/testsvm"
homepage = "https://github.com/macalinao/testsvm"
repository = "https://github.com/macalinao/testsvm"
readme = "README.md"
keywords = ["ian-macalinao", "solana", "svm", "testing", "blockchain"]
categories = ["development-tools::testing", "simulation"]

[dependencies]
solana-address-book = { version = "0.2.0", path = "../solana-address-book" }
anchor-utils = { version = "0.1.0", path = "../anchor-utils" }
testsvm-assertions = { version = "0.1.0", path = "../testsvm-assertions" }
testsvm-core = { version = "0.1.1", path = "../testsvm-core" }
testsvm-spl = { version = "0.1.0", path = "../testsvm-spl" }
anyhow = "1.0"
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }
colored = "3.0"
litesvm = "0.8.0"
solana-sdk = "2.2.1"
strum = { version = "0.27", features = ["derive"] }
